Thursday, July 3rd, 2003   Al Riddoch <alriddoch@zepler.org>

	* Update rpm spec to be cleaner, and make the technical sections
	  more generic.

Friday, June 27th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Did a Quaternion-specific implementation of rotation(from, to)
	  instead of just calling the RotMatrix version and
	  converting. Also changed RotMatrix<2>::rotation(from, to)
	  not to throw ColinearVectors in the case where the
	  inputs are antiparallel, since in 2d there's only
	  one possible plane of rotation and we can give
	  a canonical answer.

Tuesday, June 24th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Fixed a bug in RotMatrix::rotation(from, to),
	  added a Quaternion wrapper for the same function

Tuesday, June 3rd, 2003   Ron Steinke <rsteinke@w-link.net>

	* Instantiated Intersect(), Contains() functions
	  and stream operators for dim=2,3 in .cpp files
	* Made most template functions inline, bumped
	  the interface number in case this broke
	  compatibility

Tuesday, May 27th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Added elements() const accessors to the underlying
	  arrays in Vector and Point.

Sunday, May 4th, 2003   Ron Steinke <rsteinke@w-link.net>

	* Toned down chuck's more explicit message for the
	  failure of the configure check for Atlas. Anyone
	  who doesn't know what Atlas is isn't going to care
	  about the Atlas::Message::Object encoding code
	  stubs, and it's best not to make them think they
	  need to download another library if they don't have to.

Thursday, May 1st, 2003   Ron Steinke <rsteinke@w-link.net>

	* Changed configure.in to configure.ac, since
	  it now contains code which is incompatible
	  with autoconf 2.13

Thursday, April 24th, 2003   Al Riddoch <alriddoch@zepler.org>

	* Add news item, and fix rpm spec.

	* Release 0.2.11, API 0.2, interface version 1.

Wednesday, April 23rd, 2003   Al Riddoch <alriddoch@zepler.org>

	* Update spec file, and set the interface version ready for
	  release.
